did lots O stuff

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <div class="row-header"><br>
       <div id="time"></div><br>
       <div id="questions"></div>
-      <button class="button" id="answer0" value=0></button><br>
-      <button class="button" id="answer1" value=1></button><br>
-      <button class="button" id="answer2" value=2></button><br>
-      <button class="button" id="answer3" value=3></button><br>
-      <!-- <div id="gif-holder"></div> -->
+      <button class="button" id="answer0" value=0></button>
+      <button class="button" id="answer1" value=1></button>
+      <button class="button" id="answer2" value=2></button>
+      <button class="button" id="answer3" value=3></button>
     </div>
   </div>
 
