--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <h1 class="header">Rick & Morty Trivia</h1>
     </div>
 
-    <div class="row-header"><br>
-      <div id="time"></div><br>
+    <div class="header">
+      <div id="time"></div>
       <div id="questions"></div>
       <button class="button" id="answer0" value=0></button>
       <button class="button" id="answer1" value=1></button>
@@ -22,7 +22,5 @@
       <button class="button" id="answer3" value=3></button>
     </div>
   </div>
-
-
   </body>
 </html>
