--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <title>Rick & Morty trivia</title>
   </head>
   <body>
-    <div class="container-fluid">
-    <div class="row">
+    <div class="container">
       <h1 class="header">Rick & Morty Trivia</h1>
-    </div>
 
     <div class="header">
       <div id="time"></div>
