added br and small css tweaks

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="assets/javascript/app.js"></script>
     <meta charset="utf-8">
-    <title>Rick & Morty trivia</title>
+    <title>Rick & Morty Trivia</title>
   </head>
   <body>
     <div class="container">
       <h1 class="header">Rick & Morty Trivia</h1>
-
     <div class="header">
       <div id="time"></div>
       <div id="questions"></div>
